--- a/test/fixtures/line_items.yml
+++ b/test/fixtures/line_items.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  references: 
-  references: 
-  quantity: 1
+  product: one
+  cart: one
 
 two:
-  references: 
-  references: 
-  quantity: 1
+  product: two
+  cart: two
